infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brugsen-aabnselv
  namespace: brugsen-laesoe
  labels:
    svc: brugsen-aabnselv
spec:
  selector:
    app: brugsen-aabnselv
  ports:
  - port: 80
    targetPort: 8080
